Compress geojson and kml coordinates